Fixing some bugs and adding some more info to readme

--- a/src/components/itemcount.css
+++ b/src/components/itemcount.css
@@ -69,7 +69,7 @@ input::-webkit-inner-spin-button {
   width: 50%;
   display: inline-block;
   font-size: 13px;
-  margin: 0 0 5px;
+  margin: 0;
   resize: vertical;
 }
 
